Application browsing by category or publisher

--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,5 +1,6 @@
 warehouse (0.0.3) unstable; urgency=low
-  * Categories
+  * Categories page
+  * Application browsing
 
  -- Basil Semuonov <basil.semuonov@gmail.com>  Sat, 12 Oct 2013 16:12:23 +0400
 
