--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,8 @@
+warehouse (0.0.5) unstable; urgency=low
+  * Search tab
+
+ -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 14 Oct 2013 18:16:21 +0400
+
 warehouse (0.0.4) unstable; urgency=low
   * Application installation
 
