qmlthreadedworker base impl

--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,5 +1,5 @@
 warehouse (0.0.7) unstable; urgency=low
-  * <Add change description here>
+  * Minor ui fix
 
  -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 14 Oct 2013 22:38:37 +0400
 
