--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -2,6 +2,8 @@ warehouse (0.0.7) unstable; urgency=low
   * Minor ui fix
   * Actions queue
   * Basic comments
+  * Collapsible description
+  * Settings page
 
  -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 17 Oct 2013 22:38:37 +0400
 
