--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,5 +1,8 @@
 warehouse (0.0.9) stable; urgency=low
   * Installed apps list
+  * Error notifications
+  * Multi Language support
+  * URI support
 
  -- Basil Semuonov <basil.semuonov@gmail.com>  Sat, 19 Oct 2013 17:57:19 +0400
 
