--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,10 @@
+warehouse (0.1.0) stable; urgency=low
+  * Installed apps info
+  * URI integration with site
+  * Install apps fix
+
+ -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 21 Oct 2013 18:33:53 +0400
+
 warehouse (0.0.9) stable; urgency=low
   * Installed apps list
   * Error notifications
