--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,8 @@
+warehouse (0.1.1) stable; urgency=low
+  * Global link support
+
+ -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 21 Oct 2013 23:58:27 +0400
+
 warehouse (0.1.0) stable; urgency=low
   * Installed apps info
   * URI integration with site
