--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,7 +1,8 @@
 warehouse (0.1.1) stable; urgency=low
   * Global link support
+  * Security update
 
- -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 21 Oct 2013 23:58:27 +0400
+ -- Basil Semuonov <basil.semuonov@gmail.com>  Thu, 24 Oct 2013 16:57:57 +0400
 
 warehouse (0.1.0) stable; urgency=low
   * Installed apps info
