--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,9 @@
+warehouse (0.1.2) stable; urgency=low
+  * UI updates
+  * Translation updates
+
+ -- Basil Semuonov <basil.semuonov@gmail.com>  Thu, 24 Oct 2013 17:00:21 +0400
+
 warehouse (0.1.1) stable; urgency=low
   * Global link support
   * Security update
