--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,8 @@
+warehouse (0.1.3) stable; urgency=low
+  * <Add change description here>
+
+ -- Basil Semuonov <basil.semuonov@gmail.com>  Thu, 24 Oct 2013 22:05:47 +0400
+
 warehouse (0.1.2) stable; urgency=low
   * UI updates
   * Translation updates
