--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,5 +1,5 @@
 warehouse (0.1.3) stable; urgency=low
-  * <Add change description here>
+  * Icons download fix
 
  -- Basil Semuonov <basil.semuonov@gmail.com>  Thu, 24 Oct 2013 22:05:47 +0400
 
