--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,8 @@
+warehouse (0.1.4) stable; urgency=low
+  * Screenshot panel update
+
+ -- Basil Semuonov <basil.semuonov@gmail.com>  Fri, 25 Oct 2013 13:39:05 +0400
+
 warehouse (0.1.3) stable; urgency=low
   * Icons download fix
 
