--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,14 @@
+warehouse (0.1.8) stable; urgency=low
+  * Layout update
+  * Open external links
+
+ -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 10 Mar 2014 20:33:45 +0400
+
+warehouse (0.1.7) stable; urgency=low
+  * Code base merging with sailfishos version
+
+ -- Basil Semuonov <basil.semuonov@gmail.com>  Sun, 16 Feb 2014 16:29:53 +0400
+
 warehouse (0.1.6) stable; urgency=low
   * Platform filtering
 
