--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,8 @@
+warehouse (0.1.9) stable; urgency=low
+  * Login page/account support
+
+ -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 10 Mar 2014 22:03:34 +0400
+
 warehouse (0.1.8) stable; urgency=low
   * Layout update
   * Open external links
